<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.example.chongwen.MainActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ID_photo_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/good_morning_img" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="monospace"
                android:text="登录"
                android:textColor="#7B1FA2"
                android:textSize="36sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#deff00" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/calibri"
            android:hint="@string/courier_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/holo_purple" />

        <EditText
            android:id="@+id/phoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/calibri"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/holo_purple" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_email_white_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:fontFamily="@font/calibri"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/holo_purple"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_lock_white_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:fontFamily="@font/calibri"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/holo_purple"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/password_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_lock_white_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:fontFamily="@font/calibri"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/holo_purple"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/btn_sign_in"
                android:textAllCaps="false"
                android:textColor="#960C0B0B"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/btn_sign_up"
                android:textAllCaps="false"
                android:textColor="#960C0B0B"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
